Fix comments formatting and update script source

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta name="keywords" content="%VITE_KEYWORDS%" />
     <meta name="description" content="%VITE_DESCRIPTION%" />
     <link rel="icon" href="%VITE_FAVICON%" />
-    <!-- 引入图标库 -->
+    <!--引入图标库-->
     <link rel="stylesheet" href="%VITE_ICON_LIBRARY%">
-    <!-- 引入字体 -->
+    <!--引入字体-->
     <link rel="stylesheet" href="%VITE_FONT_LIBRARY%">
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <!--鼠标轨迹JS库-->
-    <script type="module" src="/src/Mouse-Trail.js"></script>
+    <script type="module" src="/Mouse-Trail.js"></script>
     <script>MouseTrail.init();</script>
   </body>
 </html>
